overflow fix

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -49,6 +49,15 @@ body {
     color: var(--color-white);
     transition: all .4s ease-in-out;
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+    display: none;
+}
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
 
 a {
     display: inline-block;
